# ttsimport

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  vue.config.js
.devcontainer/: Dockerfile  devcontainer.json
api/: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  setup.py
api/.devcontainer/: devcontainer.json
api/.run/: flask run.run.xml
api/fftcgtool-api/: ffdecks.py
api/fftcgtool_api/: __init__.py  ffdecks.py  wsgi.py
api/ttsimport/: config.py  ffdecks.py  main.py
public/: index.html
src/: App.vue
src/components/: Decks.vue  DecksList.vue  LanguageSelect.vue  MainView.vue  ThemeToggle.vue  TitleBar.vue
ui/: .dockerignore  .gitignore  Dockerfile  package.json
ui/.devcontainer/: devcontainer.json
ui/production/nginx/conf.d/: default.conf
ui/src/: main.js
ui/src/components/: Deck.vue  DeckAddForm.vue  Decks.vue  DecksList.vue  IconTextButton.vue  LanguageSelect.vue  MainView.vue  ThemeToggle.vue  TitleBar.vue
ui/src/plugins/: vue-ttsimport.js
