[tool.poetry]
authors = ["LDericher <40151420+ldericher@users.noreply.github.com>"]
description = ""
include = ["ttsimport/carddb.zip"]
license = "LICENSE"
name = "ttsimport"
version = "0.5.2"

[tool.poetry.dependencies]
aiofiles = "^0.8.0"
fastapi = "^0.79.0"
fftcgtool = {git = "https://github.com/ldericher/fftcgtool.git", branch = "develop"}
python = "^3.9"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
